--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
    <header>
        <div class="header-logo"><img src="/images/logo-mercado-liebre.svg" alt="">
        <div class="barra"> 
-        <input type="text" placeholder="Buscar productos">
+        <input type="text" placeholder="Buscar productos, marcas y más...">
         <i class="fas fa-search"></i>
        </div>
         
@@ -46,8 +46,9 @@
            
             </header>
         <banner>
-            <div id="banner"><img src="/images/img-home-banner.jpg" alt=""></div>
-        </banner> 
+            <div id="banner"><img src="/images/img-home-banner.jpg" witdth="100%"></div>
+        </banner>
+
    <main class="main-productos">
 
        <div class="section-titulo"><h2>Basado en tu última visita</h2></div>
@@ -56,8 +57,8 @@
            <article>
              <div class="producto">
                 <img src="/images/img-cafetera-moulinex.jpg" height='300'>
-                <i class="fas fa-truck"></i>
                 <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">
                 <h3>$6.770</h3>
                 <p>40% off</p></div>
@@ -69,8 +70,9 @@
                 <article>
             <div class="producto">
                <img src="/images/img-macbook-pro-2019.jpg" height='300'>
-               <i class="fas fa-truck"></i>
+               
                <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">
                 <h3>$230.000</h3> 
                <p>20% off</p></div> 
@@ -82,8 +84,9 @@
             <article>
               <div class="producto">
                 <img src="/images/img-samsung-galaxy-s10.jpg" height='300'>
-                <i class="fas fa-truck"></i>
+               
                 <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">
                 <h3>$70.500</h3>
                 <p>10% off</p></div>
@@ -95,8 +98,9 @@
             <article>
             <div class="producto">
                 <img src="/images/img-tv-samsung-smart.jpg" height='300'>
-                <i class="fas fa-truck"></i>
+                
                 <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">     
                 <h3>$23.200</h3>
                 <p>5% off</p></div>
@@ -114,8 +118,9 @@
            <article>
            <div class="producto">
                <img src="/images/img-cafetera-moulinex.jpg" height='300'>
-                <i class="fas fa-truck"></i>
+               
                 <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">
                 <h3>$6.770</h3>
                 <p>40% off</p></div>
@@ -127,8 +132,9 @@
             <article>
             <div class="producto">
                 <img src="/images/img-macbook-pro-2019.jpg" height='300'>
-                <i class="fas fa-truck"></i>
+                
                 <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">
                 <h3>$230.000</h3>
                 <p>20% off</p></div>
@@ -140,8 +146,9 @@
             <article>
             <div class="producto">
                 <img src="/images/img-samsung-galaxy-s10.jpg" height='300'>
-                <i class="fas fa-truck"></i>
+                
                 <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">
                 <h3>$70.500</h3>
                 <p>10% off</p></div>
@@ -153,8 +160,9 @@
             <article>  
              <div class="producto">
                 <img src="/images/img-tv-samsung-smart.jpg" height='300'>
-                <i class="fas fa-truck"></i>
+               
                 <div class="precio">
+                <i class="fas fa-truck"></i>
                 <div class="precio-oferta">
                 <h3>$23.200</h3>
                 <p>5% off</p></div>
